# belay-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: propose-contract-pack.yaml  spec-ambiguity.yaml
.github/workflows/: ci.yaml  release.yaml
belay/: __init__.py  canonical.py  clock.py  errors.py
belay/approvals/: __init__.py  queue.py
belay/cli/: __init__.py  main.py
belay/contracts/: __init__.py  expressions.py  loader.py  model.py
belay/db/: __init__.py  alembic.ini  models.py
belay/db/migrations/: env.py
belay/db/migrations/versions/: 0001_events.py
belay/executor/: __init__.py  idempotency.py  recovery.py  saga.py
belay/ledger/: __init__.py  counterfactual.py  model.py  redact.py  replay.py  signing.py  store.py  verify.py
belay/planner/: __init__.py  model.py  planner.py
belay/planner/adapters/: __init__.py  sql.py
belay/policy/: __init__.py  baseline.py  engine.py  explain.py  model.py  quota.py
belay/proxy/: __init__.py  config.py  lifecycle.py  server.py  upstream.py
belay/rewind/: __init__.py  service.py
conformance/: __init__.py  cli.py  registry.py  report.py  target.py
conformance/targets/: __init__.py  belay_target.py
conformance/tests/: __init__.py  conftest.py  fakes.py  test_l1_contracts.py  test_l2_plans_policy.py  test_l3_sagas_rewind.py
docs/: architecture.md  plan-v2.md  plan.md  spec.md  traceability.md
docs/adr/: 0000-e0-scaffolding.md  0001-e1-contracts-expressions.md  0002-e2-ledger.md  0003-e3-proxy-l1.md  0004-e4-planner-policy.md  0005-e5-approvals.md  0006-e6-saga-executor.md  0007-e7-rewind.md  0008-e8-conformance-suite.md  0009-e9-demo-docs-polish.md  0010-e10-anomaly-baselines.md  0011-e11-sql-dry-run.md  0012-e12-counterfactual-replay.md  0013-e13-signed-evidence.md  0014-e14-identity-attribution.md  0015-e15-identity-quota.md  0016-e16-blast-radius-self-explanation.md  0017-flaky-hypothesis-deadline-fix.md  0018-traceability-matrix.md
examples/: demo.py  demo.tape  demo_anomaly.py  demo_attribution.py  demo_counterfactual.py  demo_quota.py  demo_self_explain.py  demo_signed_evidence.py  demo_sql.py
examples/contracts/: crm.yaml  email.yaml  fs.yaml
examples/crm-mock/: server.py
examples/fs-server/: server.py
scripts/: traceability.py
tests/: test_imports.py
tests/approvals/: test_queue.py
tests/cli/: test_approvals.py  test_conformance.py  test_counterfactual.py  test_main.py  test_plan.py  test_rewind.py  test_verify.py  test_verify_evidence.py  test_wrap.py
tests/contracts/: test_expressions.py  test_loader.py  test_model.py
tests/executor/: test_capture.py  test_conditional.py  test_crm_mock_acceptance.py  test_idempotency.py  test_property_coherence.py  test_recovery.py  test_redact_compensation.py  test_stage_order.py
tests/ledger/: test_counterfactual.py  test_redact.py  test_replay.py  test_signing.py  test_store.py  test_unknown_fields.py  test_verify.py
tests/planner/: test_planner.py
tests/planner/adapters/: test_sql.py
tests/policy/: test_anomaly.py  test_baseline.py  test_engine.py  test_explain.py  test_quota.py
tests/proxy/: test_identity_attribution.py  test_lifecycle.py  test_no_self_approval.py  test_server.py  test_stdio_integration.py
tests/rewind/: test_service.py
tests/tools/: test_traceability.py
