[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "belay-mcp"
version = "0.2.0a1"
description = "An MCP proxy giving AI agents safe, reversible tool execution: contracts, dry-run planning, policy, approvals, saga execution, and rewind."
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Belay contributors" }]
keywords = ["mcp", "agents", "safety", "contracts", "saga", "rollback"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "mcp>=1.0",
    "anyio>=4.0",
    "pydantic>=2.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "typer>=0.12",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://github.com/Jairogelpi/belay-mcp"
Specification = "https://github.com/Jairogelpi/belay-mcp/blob/main/docs/spec.md"

[project.scripts]
belay = "belay.cli.main:main"
belay-conformance = "conformance.cli:main"

[project.optional-dependencies]
dev = [
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "hypothesis>=6.100",
    "ruff>=0.6",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
    "pre-commit>=3.7",
]

[tool.hatch.build.targets.wheel]
packages = ["belay", "conformance"]

[tool.hatch.build.targets.wheel.force-include]
# The conformance suite locates fixtures via `Path(__file__).parents[2] /
# "examples"` (repo-root-relative in dev) -- shipping `examples/` as a
# top-level sibling of `belay/`/`conformance/` in the wheel keeps that
# same relative path valid for an installed `belay-conformance` too.
"examples" = "examples"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["belay", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["^tests/", "^conformance/tests/"]

[[tool.mypy.overrides]]
module = "tests.*"
strict = false
ignore_errors = true

[[tool.mypy.overrides]]
module = "conformance.tests.*"
strict = false
ignore_errors = true

[tool.pytest.ini_options]
addopts = "--cov=belay --cov-report=term-missing -m \"not slow\""
testpaths = ["tests"]
markers = [
    "slow: starts a real MCP subprocess or otherwise runs noticeably longer than the fast suite",
]

[tool.coverage.run]
source = ["belay"]

[tool.coverage.report]
# ponytail: most packages beyond belay/contracts are still empty stubs
# (E2-E9 land them). A repo-wide 90% gate would fail on those until then.
# belay/contracts/ itself is at 92-100% after E1; raise this entrega by
# entrega as logic lands elsewhere, targeting 90% overall by v0.1.0 (plan.md §0).
fail_under = 0
exclude_also = ["if TYPE_CHECKING:"]
